--- a/运转.md
+++ b/运转.md
@@ -18,6 +18,8 @@ This program is initiated by Shao Zhuchen. This is a documentation for brainstor
 2. 攻略/游记
 3. 个人主页
 4. 个人专栏
+5. 线下LBS交友（同车车友）
+6. 成就系统（解锁路线、里程、车型）
 
 最终目的-->LBS社交。其实社交是个可以带来现金流的坑，就酱。
 
@@ -32,3 +34,8 @@ This program is initiated by Shao Zhuchen. This is a documentation for brainstor
 2. 捐献
 3. 付费功能
 
+###D. 工具性功能
+1. 车票识别
+2. 车次查询、评价
+3. 正晚点查询
+4. 铁路新闻
