--- a/v1.0.md
+++ b/v1.0.md
@@ -1,6 +1,8 @@
 #Version 1.0
 本版本为1.0，是本app最初始的版本，同时为后续版本打下基础。
 
+运转1.0版本主要用于扫描火车票二维码，提取二维码信息，通过扫描二维码显示出票号、开车时间及实名制火车票的姓名及证件号码。
+
 ##需求整理
 针对之前的需求，整理并提取了最基本的几项：
 
@@ -10,7 +12,13 @@
 * 存储车票信息
 
 ## 需求描述
-根据以上需求，
+因此针对这些功能需求，需要开发以下模块：
+* 扫描模块——调用相机接口
+* 解析模块——尽量使用iOS原生API进行二维码条形码的扫描（相应的文档网上比较多，如http://my.oschina.net/u/2340880/blog/405847）
+* 转换模块——使用外界的API来将扫码得到的144位数字转换为车票信息
+* 记录模块——将上述车票信息保存
+
+## 相应的界面示意图为
 
 
 
